<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:shrinkColumns="*">
    <TableRow
        android:gravity="center"
        android:layout_marginTop="@dimen/item_vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:text="@string/task_name"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_margin="0dp"
            android:id="@+id/task_name"
            android:textSize="@dimen/text_size"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:hint="@string/task_name_hint"/>
    </TableRow>
    <TableRow
        android:layout_marginBottom="@dimen/item_smaller_vertical">
        <TextView
            android:text="@string/name_error"
            android:visibility="invisible"
            android:id="@+id/name_error"
            android:textColor="@color/colorError"
            android:textStyle="bold"/>
    </TableRow>
    <TableRow
        android:gravity="center"
        android:layout_marginTop="@dimen/item_vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:textSize="@dimen/text_size"
            android:layout_margin="0dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:text="@string/dueDate"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="10"
            android:padding="@dimen/date_padding"
            android:layout_margin="0dp"
            android:background="@color/colorAccentDark"
            android:textColor="@color/colorBackground"
            android:textSize="@dimen/text_size"
            android:gravity="center"
            android:layout_height="match_parent"
            android:id="@+id/dueDate" />
    </TableRow>
    <TableRow
        android:layout_marginBottom="@dimen/item_smaller_vertical">
        <TextView
            android:text="@string/date_error"
            android:id="@+id/date_error"
            android:visibility="invisible"
            android:textColor="@color/colorError"
            android:textStyle="bold"/>
    </TableRow>
    <TableRow
        android:gravity="center"
        android:layout_marginTop="@dimen/item_vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:text="@string/notes"/>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_margin="0dp"
            android:id="@+id/task_notes"
            android:textSize="@dimen/text_size"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:hint="@string/task_notes_hint"
            android:inputType="textMultiLine"
            android:maxLines="5" />
    </TableRow>
    <TableRow
        android:layout_marginBottom="@dimen/item_smaller_vertical">
        <TextView
            android:text="@string/notes_error"
            android:visibility="invisible"
            android:id="@+id/notes_error"
            android:textColor="@color/colorError"
            android:textStyle="bold"/>
    </TableRow>
    <TableRow
        android:gravity="center"
        android:layout_marginTop="@dimen/item_vertical"
        android:layout_marginBottom="@dimen/item_vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:text="@string/status"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="10"
            android:textSize="@dimen/text_size"
            android:layout_margin="0dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:id="@+id/status"
            android:layout_gravity="center_horizontal" />
    </TableRow>
    <TableRow
        android:gravity="center"
        android:layout_marginTop="@dimen/item_vertical"
        android:layout_marginBottom="@dimen/item_vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:text="@string/importance"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="10"
            android:textSize="@dimen/text_size"
            android:layout_margin="0dp"
            android:gravity="center_vertical"
            android:layout_height="match_parent"
            android:id="@+id/priority" />
    </TableRow>
</TableLayout>